feature: 增加了一个 Prometheus 探测器，支持对租户的 Prometheus 进行探测.
